@@ -28,11 +28,12 @@ define( function( require ) {
     var thisModel = this;
 
     thisModel.solvent = Solvent.WATER;
-    thisModel.beaker = new Beaker( new Vector2( 330, 600 ), new Dimension2( 400, 325 ), PHScaleConstants.BEAKER_VOLUME );
-    thisModel.dropper = new Dropper( Solute.CUSTOM, new Vector2( thisModel.beaker.location.x + 40, 260 ), new Bounds2( 250, 260, 460, 260 ), PHScaleConstants.DROPPER_FLOW_RATE, true );
+    thisModel.beaker = new Beaker( new Vector2( 330, 550 ), new Dimension2( 400, 325 ) );
+    thisModel.dropper = new Dropper( Solute.CUSTOM, new Vector2( thisModel.beaker.location.x + 40, 210 ), new Bounds2( 250, 210, 460, 210 ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.solvent, 0, thisModel.beaker.volume );
-    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 100, 652 ), thisModel.beaker.right, PHScaleConstants.SPOUT_WIDTH, PHScaleConstants.MAX_DRAIN_FLOW_RATE );
-    thisModel.pHMeter = new PHMeter( new Vector2( 85, 80 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 605, 405 ), new Bounds2( 30, 150, 966, 680 ) );
+    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 100, 602 ), thisModel.beaker.right,
+      { enabled: thisModel.solution.volumeProperty.get() > 0 } );
+    thisModel.pHMeter = new PHMeter( new Vector2( 85, 60 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 605, 405 ), new Bounds2( 30, 150, 966, 680 ) );
 
     // Enable faucets and dropper based on amount of solution in the beaker.
     thisModel.solution.volumeProperty.link( function( volume ) {
