@@ -1,3 +1,5 @@
+11/18/13 add 'Molecule count' and 'ratio' check boxes (no view components yet)
+11/18/13 add options to various model elements, simplify usage of constructors, fix 'Reset All'
 11/18/13 use opaque colors for solutes, so that color of solution matches dropper when solution is 100% solute
 11/18/13 optionally show pH value of solute on dropper ('pH 11.00')
 11/18/13 pH meter for 'Custom' screen
